<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_menu"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title=""
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/item_date"
                android:title="@string/date_filter"/>
            <item
                android:id="@+id/item_room"
                android:title="@string/room_filter"/>

        </menu>
    </item>

</menu>