<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ListMeetingActivity"
    android:background="@color/charte_olive">

    <TextView
        android:id="@+id/tv_activity_list_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tv_add_meeting_style"
        android:text="@string/filtered_list"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_activity_list_meeting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_activity_list_meeting"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_activity_list_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_20sdp"
        android:backgroundTint="@color/red"
        app:borderWidth="0dp"
        android:src="@drawable/ic_baseline_add_24"
        app:tint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/fab" />


</RelativeLayout>