...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <CheckBox
            android:id="@+id/cb_room_filter_room1"
            style="@style/checkbox_room_filter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_room_filter_room2"
...
            android:id="@+id/cb_room_filter_room7"
            style="@style/checkbox_room_filter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_room_filter_room5" />

        <CheckBox
            android:id="@+id/cb_room_filter_room8"
            style="@style/checkbox_room_filter"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/cb_room_filter_room6" />

        <CheckBox
            android:id="@+id/cb_room_filter_room9"
...
